Resolved overflow hiccup on the full-width-feature by dropping the font size on the heading block.

--- a/scss/components/_body-copy.scss
+++ b/scss/components/_body-copy.scss
@@ -58,9 +58,26 @@
     font-family: var(--theme-font-family--serif--primary);
     font-style: normal;
     font-weight: 400;
-    font-size: 24px;
+    font-size: 22px;
     line-height: 1.33;
     letter-spacing: -0.02em;
   }
+
+  @include breakpoint(sm) {
+
+    &--large,
+    &--xl {
+      font-size: 24px;
+    }
+
+  } // min width sm
+
+  @include breakpoint(md) {} // min width md
+
+  @include breakpoint(lg) {} // min width lg
+
+  @include breakpoint(xl) {} // min width xl
+
+  @include breakpoint(xxl) {} // min width xxl
 
 }
