--- a/scss/components/_section.scss
+++ b/scss/components/_section.scss
@@ -1,3 +1,6 @@
 .section {
   position: relative;
+  &--accordion-with-image {}
+  &--full-width-feature {}
+  &--fifty-fifty-feature {}
 }
